--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@
 
 
 title: RetroTINK Firmware Repository
+link-title: "[RetroTINK Firmware Repository]({{site.url}}"
 email: retrotink@emmaline.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Your one-stop firmware shop for the entire family of RetroTINK devices
