--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 
 title: RetroTINK Firmware Repository
-link-title: "# [RetroTINK Firmware Repository]( {{site.url}} )"
+link-title: "# [RetroTINK Firmware Repository](/)"
 email: retrotink@emmaline.dev
 description: >- # this means to ignore newlines until "baseurl:"
   Your one-stop firmware shop for the entire family of RetroTINK devices
