Forgot to add webhook secret

--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -31,6 +31,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Script and Push Notification
+        env:
+          WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
         run: |
           python3 your_script.py --target "rt4k-experimental.md"
           EDITED_TXT_FILE="rt4k-experimental.txt"
