--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -32,15 +32,14 @@ jobs:
 
       - name: Run Script and Push Notification
         run: |
-          python3 common.py --target "rt5x.md"
-          EDITED_TXT_FILE="rt5x.txt"
+          python3 common.py --target "rt4k-sdcards.md"
         env:
-          WEBHOOK: ${{ secrets.RT5X_COMMUNITY_WEBHOOK }}
+          WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add $EDITED_TXT_FILE
-          git commit -m "Update $EDITED_TXT_FILE"
+          git add rt4k-sdcards.txt
+          git commit -m "Update rt5x.txt with new version number"
           git push
