--- a/.github/workflows/rt5x-update-notification.yml
+++ b/.github/workflows/rt5x-update-notification.yml
@@ -33,7 +33,6 @@ jobs:
       - name: Run Script and Push Notification
         run: |
           python3 common.py --target "rt5x.md"
-          EDITED_TXT_FILE="rt5x.txt"
         env:
           WEBHOOK: ${{ secrets.RT5X_COMMUNITY_WEBHOOK }}
 
@@ -41,6 +40,6 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add $EDITED_TXT_FILE
-          git commit -m "Update $EDITED_TXT_FILE"
+          git add rt5x.txt
+          git commit -m "Update rt5x.txt with new version number"
           git push
