--- a/.github/workflows/rt5x-experimental-update-notification.yml
+++ b/.github/workflows/rt5x-experimental-update-notification.yml
@@ -40,6 +40,6 @@ jobs:
         run: |
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add rt5x-experimental.txt
+          git add 5x-experimental.txt
           git commit -m "Update rt5x.txt with new version number"
           git push
