--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Run Script and Push Notification
         run: |
-          python3 common.py --target "rt4k-sdcards.md"
+          python3 common.py --target "4k-sdcards.md"
         env:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
