--- a/.github/workflows/rt5x-experimental-update-notification.yml
+++ b/.github/workflows/rt5x-experimental-update-notification.yml
@@ -38,6 +38,8 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
-          git add 5x.txt
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add 5x-experimental.txt
           git commit -m "Update rt5x.txt with new version number"
           git push
