--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -38,6 +38,7 @@ jobs:
 
       - name: Commit and Push Changes
         run: |
+          git pull
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add 4k-experimental.txt
