stop spamming my email on handled exit

--- a/.github/workflows/rt4k-update-notification.yml
+++ b/.github/workflows/rt4k-update-notification.yml
@@ -44,3 +44,5 @@ jobs:
           git add 4k.txt
           git commit -m "Update rt5x.txt with new version number"
           git push
+      - if: failure()
+        run: # exit_with_success
