--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -37,6 +37,7 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
+        continue-on-error: true 
         run: |
           sleep 20s
           git pull
@@ -45,5 +46,4 @@ jobs:
           git add 4k-experimental.txt
           git commit -m "Update rt5x.txt with new version number"
           git push
-      - if: failure()
-        run: # exit_with_success
+          
