--- a/.github/workflows/rt4k-update-notification.yml
+++ b/.github/workflows/rt4k-update-notification.yml
@@ -37,6 +37,7 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
+        continue-on-error: true 
         run: |
           git pull
           git config --local user.name "github-actions[bot]"
@@ -44,5 +45,3 @@ jobs:
           git add 4k.txt
           git commit -m "Update rt5x.txt with new version number"
           git push
-      - if: failure()
-        run: # exit_with_success
