--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -3,7 +3,7 @@ name: rt4k-sdcards-update-notification
 on:
   push:
     branches:
-      - discord-autopost
+      - main
     paths:
       - '4k-sdcards.md'
 
