--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -26,9 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Wait for pages-build-deployment Workflow to Complete
-        run: python3 check_workflow_status.py --workflow pages-build-deployment
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: sleep 600s
 
       - name: Run Script and Push Notification
         run: |
