--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -26,7 +26,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Wait for pages-build-deployment Workflow to Complete
-        run: sleep 600s
+        run: python3 check_workflow_status.py --workflow pages-build-deployment
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Run Script and Push Notification
         run: |
