--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -26,7 +26,7 @@ jobs:
           pip install -r requirements.txt
 
       - name: Wait for pages-build-deployment Workflow to Complete
-        run: python3 check_workflow_status.py --workflow pages-build-deployment
+        run: python3 check_workflow_status.py --workflow "pages build and deployment with artifacts-next"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
