Adding gitattributes, adjusting jobs again, testing

--- a/.github/workflows/rt4k-update-notification.yml
+++ b/.github/workflows/rt4k-update-notification.yml
@@ -47,13 +47,16 @@ jobs:
 
       - name: Commit and Push Changes
         if: env.exit_code == '0'
-        continue-on-error: true 
         run: |
-          sleep 30s
-          git pull
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add 4k.txt
-          git add index.md
-          git commit -m "Update 4k.txt and index.md with new version number"
-          git push
+          git diff --quiet --exit-code  # Check if there are changes
+          if [ $? -eq 0 ]; then
+            echo "No changes to commit."
+          else
+            git pull
+            git config --local user.name "github-actions[bot]"
+            git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add 4k.txt
+            git add index.md
+            git commit -m "Update 4k.txt and index.md with new version number"
+            git push
+          fi
