--- a/.github/workflows/rt5x-update-notification.yml
+++ b/.github/workflows/rt5x-update-notification.yml
@@ -34,27 +34,30 @@ jobs:
         continue-on-error: true 
         run: |
           python3 common.py --target "5x.md"
-          echo "exit_code=$?" >> $GITHUB_ENV
+          exit_code=$?
+          echo "exit_code=$exit_code" >> $GITHUB_ENV
+          if [ $exit_code -eq 1 ]; then
+            echo "Script failed with exit code 1. Failing the action."
+            gh run cancel ${{ github.run_id }}
+            gh run watch ${{ github.run_id }}
+            exit 1
+          fi
         env:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
-      - name: Fail Action on Script Error
-        if: env.exit_code == '1'
-        run: |
-          echo "Script failed with exit code 1. Failing the action."
-          gh run cancel ${{ github.run_id }}
-          gh run watch ${{ github.run_id }}
-          exit 1
-
       - name: Commit and Push Changes
-        if: env.exit_code != '2'
-        continue-on-error: true 
+        if: env.exit_code == '0'
         run: |
-          sleep 30s
-          git pull
-          git config --local user.name "github-actions[bot]"
-          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git add 5x.txt
-          git add index.md
-          git commit -m "Update 5x.txt and index.md with new version number"
-          git push
+          git diff --quiet --exit-code  # Check if there are changes
+          if [ $? -eq 0 ]; then
+            echo "No changes to commit."
+          else
+            sleep 45s
+            git pull
+            git config --local user.name "github-actions[bot]"
+            git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+            git add 5x.txt
+            git add index.md
+            git commit -m "Update 5x.txt and index.md with new version number"
+            git push
+          fi
