--- a/.github/workflows/rt4k-update-notification.yml
+++ b/.github/workflows/rt4k-update-notification.yml
@@ -37,7 +37,7 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
-        run: |z
+        run: |
           git diff --quiet --exit-code  # Check if there are changes
           if [ $? -eq 0 ]; then
             echo "No changes to commit."
