--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -37,6 +37,7 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
+        continue-on-error: true
         run: |
           git diff --quiet --exit-code  # Check if there are changes
           if [ $? -eq 0 ]; then
