--- a/.github/workflows/rt4k-experimental-update-notification.yml
+++ b/.github/workflows/rt4k-experimental-update-notification.yml
@@ -37,12 +37,9 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
-        continue-on-error: true
         run: |
-          git diff --quiet --exit-code  # Check if there are changes
-          if [ $? -eq 0 ]; then
-            echo "No changes to commit."
-          else
+          git diff --quiet || CHANGED=$?
+          if [ "$CHANGED" == "1" ]; then
             sleep 15s
             git pull
             git config --local user.name "github-actions[bot]"
@@ -51,4 +48,6 @@ jobs:
             git add index.md
             git commit -m "Update 4k-experimental.txt and index.md with new version number"
             git push
+          else
+            echo "No changes to commit."
           fi
