--- a/.github/workflows/rt4k-sdcards-update-notification.yml
+++ b/.github/workflows/rt4k-sdcards-update-notification.yml
@@ -37,13 +37,10 @@ jobs:
           WEBHOOK: ${{ secrets.RT4K_COMMUNITY_WEBHOOK }}
 
       - name: Commit and Push Changes
-        continue-on-error: true
         run: |
-          git diff --quiet --exit-code  # Check if there are changes
-          if [ $? -eq 0 ]; then
-            echo "No changes to commit."
-          else
-            sleep 30s
+          git diff --quiet || CHANGED=$?
+          if [ "$CHANGED" == "1" ]; then
+            sleep 15s
             git pull
             git config --local user.name "github-actions[bot]"
             git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
@@ -51,4 +48,6 @@ jobs:
             git add index.md
             git commit -m "Update 4k-sdcards.txt and index.md with new version number"
             git push
+          else
+            echo "No changes to commit."
           fi
