--- a/.github/workflows/notify-discord.yml
+++ b/.github/workflows/notify-discord.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.GITHUB_TOKEN }}    
+          fetch-depth: 0 # fetches all history for all branches and tags
 
       - name: Set up Python
         uses: actions/setup-python@v2
