--- a/.github/workflows/notify-discord.yml
+++ b/.github/workflows/notify-discord.yml
@@ -31,7 +31,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Wait for pages-build-deployment Workflow to Complete
-        run: python3 notify-discord/check_workflow_status.py --workflow "pages build and deployment with artifacts-next"
+        run: |
+          python3 notify-discord/check_workflow_status.py --workflow "pages build and deployment"
+          python3 notify-discord/check_workflow_status.py --workflow "pages build and deployment with artifacts-next"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
